parser/tests/bad/expr08-3.st
% 'boolean' expression must have type 'bool'
%   exit

loop
  exit when 1
end loop
